[gd_scene load_steps=2 format=3 uid="uid://cbsslne0c6wgq"]

[ext_resource type="Script" uid="uid://dpyahskpm1821" path="res://ui/killfeed_hud.gd" id="1_l3sns"]

[node name="KillfeedHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_l3sns")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="KillLabels" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="DespawnKillLabel" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
